src/content/3.x/editor/extensions/functionality/bubble-menu.mdx
---
title: BubbleMenu extension
tags:
  - type: image
    src: https://img.shields.io/npm/v/@tiptap/extension-bubble-menu.svg?label=version
    url: https://www.npmjs.com/package/@tiptap/extension-bubble-menu
    label: Version
  - type: image
    src: https://img.shields.io/npm/dm/@tiptap/extension-bubble-menu.svg
    url: https://npmcharts.com/compare/@tiptap/extension-bubble-menu?minimal=true
    label: Downloads
meta:
  title: BubbleMenu extension | Tiptap Editor Docs
  description: Add a menu toolbar that pops up above your Tiptap editor’s text content. Learn more in our Documentation!
  category: Editor
extension:
  name: Bubble Menu
  link: https://github.com/ueberdosis/tiptap/tree/main/packages/extension-bubble-menu
  description: Add a toolbar that pops up above the text. Great to apply inline formatting.
  type: extension
  icon: MessageCircle
---

import { CodeDemo } from '@/components/CodeDemo'

This extension will make a contextual menu appear near a selection of text. Use it to let users apply [marks](/3.x/editor/extensions/marks) to their text selection.

As always, the markup and styling is totally up to you.

<CodeDemo path="/Extensions/BubbleMenu" />

## Install

```bash
npm install @tiptap/extension-bubble-menu
```

## Settings

### element

The DOM element that contains your menu.

Type: `HTMLElement`

Default: `null`

### updateDelay

The `BubbleMenu` debounces the `update` method to allow the bubble menu to not be updated on every selection update. This can be controlled in milliseconds.
The BubbleMenuPlugin will come with a default delay of 250ms. This can be deactivated, by setting the delay to `0` which deactivates the debounce.

Type: `Number`

Default: `undefined`

### resizeDelay

The `BubbleMenu` debounces the resize calculation for the bubble menu to allow the bubble menu to not be updated on every resize event. This can be controlled in milliseconds.

Type: `Number`

Default: `100`

### options

Under the hood, the `BubbleMenu` [Floating UI](https://floating-ui.com). You can control the middleware and positioning of the floating menu with these options.

Type: `Object`

Default: `{ strategy: 'absolute', placement: 'right' }`

| Option          | Type                                | Description                                                                                                                                                  |
| --------------- | ----------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| `strategy`      | `string`                            | The positioning strategy. See [here](https://floating-ui.com/docs/computePosition#strategy)                                                                  |
| `placement`     | `string`                            | The placement of the menu. See [here](https://floating-ui.com/docs/computePosition#placement)                                                                |
| `offset`        | `OffsetOptions` or `boolean`        | The [offset middleware options](https://floating-ui.com/docs/offset#options). If `true` use default options, if `false` disable the middleware               |
| `flip`          | `FlipOptions` or `boolean`          | The [flip middleware options](https://floating-ui.com/docs/flip#options). If `true` use default options, if `false` disable the middleware                   |
| `shift`         | `ShiftOptions` or `boolean`         | The [shift middleware options](https://floating-ui.com/docs/shift#options). If `true` use default options, if `false` disable the middleware                 |
| `arrow`         | `ArrowOptions` or `false`           | The [arrow middleware options](https://floating-ui.com/docs/arrow#options). If `false` disable the middleware                                                |
| `size`          | `SizeOptions` or `boolean`          | The [size middleware options](https://floating-ui.com/docs/size#options). If `true` use default options, if `false` disable the middleware                   |
| `autoPlacement` | `AutoPlacementOptions` or `boolean` | The [autoPlacement middleware options](https://floating-ui.com/docs/autoPlacement#options). If `true` use default options, if `false` disable the middleware |
| `hide`          | `HideOptions` or `boolean`          | The [hide middleware options](https://floating-ui.com/docs/hide#options). If `true` use default options, if `false` disable the middleware                   |
| `inline`        | `InlineOptions` or `boolean`        | The [inline middleware options](https://floating-ui.com/docs/inline#options). If `true` use default options, if `false` disable the middleware               |

### pluginKey

The key for the underlying ProseMirror plugin. Make sure to use different keys if you add more than one instance.

Type: `string | PluginKey`

Default: `'bubbleMenu'`

### shouldShow

A callback to control whether the menu should be shown or not.

Type: `(props) => boolean`

## Source code

[packages/extension-bubble-menu/](https://github.com/ueberdosis/tiptap/blob/main/packages/extension-bubble-menu/)

## Use the extension

### JavaScript

```js
import { Editor } from '@tiptap/core'
import BubbleMenu from '@tiptap/extension-bubble-menu'

new Editor({
  extensions: [
    BubbleMenu.configure({
      element: document.querySelector('.menu'),
    }),
  ],
})
```

### Other frameworks

Check out the demo at the [top of this page](#) to see how to integrate the bubble menu extension with React or Vue.

### Custom logic

Customize the logic for showing the menu with the `shouldShow` option. For components, `shouldShow` can be passed as a prop.

```js
BubbleMenu.configure({
  shouldShow: ({ editor, view, state, oldState, from, to }) => {
    // only show the bubble menu for images and links
    return editor.isActive('image') || editor.isActive('link')
  },
})
```

### Multiple menus

Use multiple menus by setting an unique `pluginKey`.

```js
import { Editor } from '@tiptap/core'
import BubbleMenu from '@tiptap/extension-bubble-menu'

new Editor({
  extensions: [
    BubbleMenu.configure({
      pluginKey: 'bubbleMenuOne',
      element: document.querySelector('.menu-one'),
    }),
    BubbleMenu.configure({
      pluginKey: 'bubbleMenuTwo',
      element: document.querySelector('.menu-two'),
    }),
  ],
})
```

Alternatively you can pass a ProseMirror `PluginKey`.

```js
import { Editor } from '@tiptap/core'
import BubbleMenu from '@tiptap/extension-bubble-menu'
import { PluginKey } from '@tiptap/pm/state'

new Editor({
  extensions: [
    BubbleMenu.configure({
      pluginKey: new PluginKey('bubbleMenuOne'),
      element: document.querySelector('.menu-one'),
    }),
    BubbleMenu.configure({
      pluginKey: new PluginKey('bubbleMenuTwo'),
      element: document.querySelector('.menu-two'),
    }),
  ],
})
```
